--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,10 @@
     <groupId>org.springblade</groupId>
     <artifactId>SpringBlade</artifactId>
     <packaging>jar</packaging>
-    <version>2.7.1</version>
+    <version>2.7.2</version>
 
     <properties>
-        <blade.tool.version>2.7.1</blade.tool.version>
+        <blade.tool.version>2.7.2</blade.tool.version>
 
         <java.version>1.8</java.version>
 
@@ -18,9 +18,9 @@
         <mybatis.plus.version>3.3.2</mybatis.plus.version>
         <protostuff.version>1.6.0</protostuff.version>
         <captcha.version>1.6.2</captcha.version>
-        <easyexcel.version>2.1.6</easyexcel.version>
+        <easyexcel.version>2.2.6</easyexcel.version>
 
-        <spring.boot.version>2.2.7.RELEASE</spring.boot.version>
+        <spring.boot.version>2.2.9.RELEASE</spring.boot.version>
         <spring.platform.version>Cairo-SR8</spring.platform.version>
 
         <!-- 推荐使用Harbor -->
@@ -68,6 +68,11 @@
         <dependency>
             <groupId>org.springblade</groupId>
             <artifactId>blade-core-oss</artifactId>
+            <version>${blade.tool.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springblade</groupId>
+            <artifactId>blade-core-social</artifactId>
             <version>${blade.tool.version}</version>
         </dependency>
         <dependency>
