--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -17,6 +17,11 @@ spring:
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+#第三方登陆
+social:
+  enabled: true
+  domain: http://127.0.0.1:1888
+
 #blade配置
 blade:
   prop:
