:tada: 2.8.0.RELEASE 新增在线报表模块

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -63,11 +63,38 @@ mybatis-plus:
     map-underscore-to-camel-case: true
     cache-enabled: false
 
+#报表配置
+report:
+  enabled: false
+  database:
+    provider:
+      prefix: blade-
+
+#knife4j配置
+knife4j:
+  #启用
+  enable: true
+  #基础认证
+  basic:
+    enable: false
+    username: blade
+    password: blade
+  #增强配置
+  setting:
+    enableSwaggerModels: true
+    enableDocumentManage: true
+    enableHost: false
+    enableHostText: http://localhost
+    enableRequestCache: true
+    enableFilterMultipartApis: false
+    enableFilterMultipartApiMethodType: POST
+    language: zh-CN
+
 #swagger配置信息
 swagger:
   title: SpringBlade 接口文档系统
   description: SpringBlade 接口文档系统
-  version: 2.7.3
+  version: 2.8.0
   license: Powered By SpringBlade
   licenseUrl: https://bladex.vip
   terms-of-service-url: https://bladex.vip
