--- a/pom.xml
+++ b/pom.xml
@@ -7,20 +7,21 @@
     <groupId>org.springblade</groupId>
     <artifactId>SpringBlade</artifactId>
     <packaging>jar</packaging>
-    <version>2.7.3</version>
+    <version>2.8.0</version>
 
     <properties>
-        <blade.tool.version>2.7.3</blade.tool.version>
+        <blade.tool.version>2.8.0</blade.tool.version>
 
         <java.version>1.8</java.version>
 
-        <knife4j.version>2.0.3</knife4j.version>
-        <mybatis.plus.version>3.3.2</mybatis.plus.version>
+        <knife4j.version>2.0.6</knife4j.version>
+        <mybatis.plus.version>3.4.0</mybatis.plus.version>
         <protostuff.version>1.6.0</protostuff.version>
         <captcha.version>1.6.2</captcha.version>
         <easyexcel.version>2.2.6</easyexcel.version>
 
-        <spring.boot.version>2.2.9.RELEASE</spring.boot.version>
+        <spring.boot.version>2.2.11.RELEASE</spring.boot.version>
+        <spring.plugin.version>2.0.0.RELEASE</spring.plugin.version>
         <spring.platform.version>Cairo-SR8</spring.platform.version>
 
         <!-- 推荐使用Harbor -->
@@ -31,6 +32,16 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.plugin</groupId>
+                <artifactId>spring-plugin-core</artifactId>
+                <version>${spring.plugin.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.plugin</groupId>
+                <artifactId>spring-plugin-metadata</artifactId>
+                <version>${spring.plugin.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -68,6 +79,11 @@
         <dependency>
             <groupId>org.springblade</groupId>
             <artifactId>blade-core-oss</artifactId>
+            <version>${blade.tool.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springblade</groupId>
+            <artifactId>blade-core-report</artifactId>
             <version>${blade.tool.version}</version>
         </dependency>
         <dependency>
