:tada: 3.2.0.RELEASE 新增灵活数据权限特性

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,7 +55,7 @@ mybatis-plus:
       #字段策略
       insert-strategy: not_null
       update-strategy: not_null
-      select-strategy: not_null
+      where-strategy: not_null
       #驼峰下划线转换
       table-underline: true
       # 逻辑删除配置
@@ -98,7 +98,7 @@ knife4j:
 swagger:
   title: SpringBlade 接口文档系统
   description: SpringBlade 接口文档系统
-  version: 3.1.0
+  version: 3.2.0
   license: Powered By SpringBlade
   licenseUrl: https://bladex.vip
   terms-of-service-url: https://bladex.vip
