--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,15 @@
     <groupId>org.springblade</groupId>
     <artifactId>SpringBlade</artifactId>
     <packaging>jar</packaging>
-    <version>3.1.0</version>
+    <version>3.2.0</version>
 
     <properties>
-        <blade.tool.version>3.1.0</blade.tool.version>
+        <blade.tool.version>3.2.0</blade.tool.version>
 
         <java.version>1.8</java.version>
 
         <knife4j.version>2.0.8</knife4j.version>
-        <mybatis.plus.version>3.4.3.1</mybatis.plus.version>
+        <mybatis.plus.version>3.4.3.4</mybatis.plus.version>
         <protostuff.version>1.6.0</protostuff.version>
         <captcha.version>1.6.2</captcha.version>
         <easyexcel.version>2.2.6</easyexcel.version>
@@ -89,6 +89,11 @@
         <dependency>
             <groupId>org.springblade</groupId>
             <artifactId>blade-core-social</artifactId>
+            <version>${blade.tool.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springblade</groupId>
+            <artifactId>blade-core-datascope</artifactId>
             <version>${blade.tool.version}</version>
         </dependency>
         <dependency>
