--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -93,12 +93,15 @@ knife4j:
     enableFilterMultipartApis: false
     enableFilterMultipartApiMethodType: POST
     language: zh-CN
+    enableFooter: false
+    enableFooterCustom: true
+    footerCustomContent: Copyright © 2022 SpringBlade All Rights Reserved
 
 #swagger配置信息
 swagger:
   title: SpringBlade 接口文档系统
   description: SpringBlade 接口文档系统
-  version: 3.4.0
+  version: 3.4.1
   license: Powered By SpringBlade
   licenseUrl: https://bladex.vip
   terms-of-service-url: https://bladex.vip
