:tada: 3.5.0.RELEASE 新增报文加密 令牌签名校验提示

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -147,6 +147,8 @@ social:
 
 #blade配置
 blade:
+  token:
+    sign-key: 请配置32位签名提高安全性
   xss:
     enabled: true
     skip-url:
@@ -165,3 +167,4 @@ blade:
     column: tenant_id
     tables:
       - blade_notice
+
